tests/compilation_error/for_loop_variable_redeclaration.ll
int i = 0
for i in 1 .. 10:
    pass
